# CybersecProject1

./: .gitignore  django_dos_attack.txt  pyproject.toml  sql_injection.txt  weak_password_demonstration.py
Project1/: models.py  settings.py  urls.py  views.py
Project1/migrations/: 0001_initial.py
static/: style.css
templates/: index.html  login.html  new_account.html
